# teams-app

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/base/: asgi.py  exception_handlers.py  mixins.py  urls.py  wsgi.py  yasg.py
src/base/settings/: base.py  dev.py  prod.py
src/teams_app/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
src/teams_app/migrations/: 0001_initial.py  0002_alter_member_email.py  0003_member_first_name_member_last_name.py  0004_alter_member_team.py
src/users/: google_oauth_utils.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/users/management/commands/: create_admin.py
src/users/migrations/: 0001_initial.py  0002_user_registration_way.py  0003_rename_registration_way_user_registration_method.py
